tests/integration/cli/tests/snapshots/snapshot__snapshot_longjump2.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_longjump2",
    "use_packages": [
      "sharrattj/coreutils"
    ],
    "cli_args": [],
    "stdin": null,
    "debug_output": false,
    "enable_threads": true
  },
  "result": {
    "Success": {
      "stdout": "before long jump\nafter long jump [val=10]\nbefore long jump\nafter long jump [val=20]\n",
      "stderr": "",
      "exit_code": 0
    }
  }
}
