tests/integration/cli/tests/snapshots/snapshot__snapshot_mkdir_rename.snap
---
source: tests/integration/cli/tests/snapshot.rs
assertion_line: 1369
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_mkdir_rename",
    "use_packages": [],
    "include_webcs": [],
    "cli_args": [],
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "",
      "stderr": "",
      "exit_code": 0
    }
  }
}
