tests/integration/cli/tests/snapshots/snapshot__snapshot_pipes.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_pipes",
    "use_packages": [
      "sharrattj/coreutils"
    ],
    "cli_args": [],
    "stdin": null,
    "debug_output": false,
    "enable_threads": true,
    "enable_network": false,
    "http_request": null
  },
  "result": {
    "Success": {
      "stdout": "this text should be printed by the child\nthis text should be printed by the parent\n",
      "stderr": "",
      "exit_code": 0
    }
  }
}
