tests/integration/cli/tests/snapshots/snapshot__snapshot_process_spawn.snap
---
source: tests/integration/cli/tests/snapshot.rs
assertion_line: 947
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_process_spawn",
    "use_packages": [
      "wasmer/coreutils"
    ],
    "include_webcs": [],
    "cli_args": [],
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "hi\n",
      "stderr": "Child pid: 2\nChild status 0\n",
      "exit_code": 0
    }
  }
}
