tests/integration/cli/tests/snapshots/snapshot__snapshot_process_spawn_async.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_process_spawn_async",
    "use_packages": [
      "wasmer/coreutils"
    ],
    "include_webcs": [],
    "cli_args": [],
    "enable_threads": true,
    "enable_network": false,
    "enable_async_entrypoint": true
  },
  "result": {
    "Success": {
      "stdout": "hi\n",
      "stderr": "Child pid: 2\nChild status 0\n",
      "exit_code": 0
    }
  }
}
